increase the header z-index [carousel arrows with high z-index issue]

--- a/layout/layout.module.scss
+++ b/layout/layout.module.scss
@@ -6,7 +6,7 @@
   padding         : 0.5rem 0;
   box-shadow      : 0 2px 28px 0 rgb(0 0 0 / 9%);
   position        : sticky;
-  z-index         : 1;
+  z-index         : 5;
   top             : 0;
   left            : 0;
 
